# brain-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
plugin/: README.md
src/brain/: __init__.py  cli.py  client.py  commands.py  config.py  context.py  depth.py  errors.py  keys.py  profiles.py  retry.py  stats.py  structured.py
tests/: conftest.py  test_config.py  test_context.py  test_depth.py  test_errors.py  test_profiles.py  test_stats.py  test_structured.py
